src/main.css
@font-face {
    font-family: "Helvetica";
    src: url("../fonts/helvetica-rounded-bold-5871d05ead8de.otf");
}

::-webkit-scrollbar {
    width: 5px;
    background: transparent;
    height: 10px;
}

::-webkit-scrollbar-thumb {
    background: white;
    border-radius: 10px;
}

* {
    font-family: "Helvetica";
    color: white;
    scroll-padding-top: 155px;
    scroll-behavior: smooth;
}

body {
    position: relative;
    padding: 0;
    margin: 0;
    background-color: white;
    overflow-x: hidden;
    overflow-y: overlay;
}

@keyframes fadeIn {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

.fade-in {
    animation: fadeIn 2.5s;
}

#tsparticles {
    position: relative;
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100vh;
    min-height: 550px;
}

.tooltip {
    position: relative;
}

.tooltip .tooltiptext {
    visibility: hidden;
    background-color: white;
    color: black;
    font-size: 14px;
    text-align: center; 
    padding: 5px 0;
    border-radius: 6px;
    width: 110px;
    bottom: 100%;
    left: 50%;
    margin-left: -55px;
    position: absolute;
    z-index: 9999;
}

.tooltip .tooltiptext::after {
    content: " ";
    position: absolute;
    top: 100%;
    left: 50%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: white transparent transparent transparent;
}

.tooltip:hover .tooltiptext {
    visibility: visible;
}

.tooltip .tooltiptext {
    opacity: 0;
    transition: opacity 1s;
}
  
.tooltip:hover .tooltiptext {
    opacity: 1;
}

.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 3;
    background: transparent;
}

.navbar-solid {
    background-color: black;
}

.leftNavbar {
    display: flex;
    align-items: center;
}

.leftNavbar img {
    width: 40px;
    height: 40px;
    margin: 15px;
    margin-left: 24px;
}

.leftNavbar a {
    position: relative;
    font-size: 24px;
    white-space: nowrap;
    text-decoration: none;
}

.rightNavbar ul {
    display: flex;
    list-style: none;
    padding: 0;
}

.rightNavbar li a {
    display: block;
    position: relative;
    font-size: 18px;
    margin-right: 38px;
    text-decoration: none;
}

.text-hover a::before {
    content: '';
    position: absolute;
    width: 100%;
    height: 2px;
    border-radius: 4px;
    background-color: currentColor;
    bottom: -2px;
    left: 0;
    transform-origin: right;
    transform: scaleX(0);
    transition: transform .3s ease-in-out;
}

.text-hover a:hover::before {
    transform-origin: left;
    transform: scaleX(1);
}

.nav-button {
    display: none;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    position: fixed;
    right: 40px;
    width: 30px;
    height: 21px;
    cursor: pointer;
}

.nav-button span {
    height: 3px;
    width: 100%;
    background-color: white;
    border-radius: 10px;
    transition: transform .3s ease-in;
}

.toggle .line1 {
    transform: rotate(-45deg) translate(-6px, 6px);
}

.toggle .line2 {
    opacity: 0;
}

.toggle .line3 {
    transform: rotate(45deg) translate(-6px, -6px);
}

.home {
    position: absolute;
    top: 50%;
    left: 50%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    text-align: center;
    z-index: 1;
}

.home img {
    width: 150px;
    height: 150px;
}

.home p {
    white-space: nowrap;
    margin: 0;
}

.home-name {
    font-size: 72px;
}

.home-subtext {
    font-size: 28px;
}

.logos a {
    font-size: 0;
}

.logos img {
    height: 37.5px;
    width: 37.5px;
    margin: 15px 7.5px;
}

.title-flex {
    display: flex;
    justify-content: center;
}

.title-border {
    background-color: transparent;
    height: 150px;
    display: flex;
    justify-content: center;
    max-width: 600px;
    width: 50%;
    min-width: 350px; 
    position: relative;
    border: 3px solid white;
    border-radius: 20px;
    background-color: black;
}

.title {
    position: absolute;
    color: white;
    top: 50%;
    left: 50%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    margin: 0 auto;
    text-align: center;
    white-space: nowrap;
    overflow: hidden;
    font-size: 48px;
    color: transparent;
}

@keyframes typewriter {
    0% {
        border-right: 2px solid rgba(255, 255, 255, 0.75);
        width: 0;
    }
    99% {
        border-right: 2px solid rgba(255, 255, 255, 0.75);
    }
    100% {
        width: 6.2em;
    }
}

@keyframes blinkTextCursor {
    from {
        border-right-color: white;
    }
    to {
        border-right-color: transparent;
    } 
}

.title.visible {
    color: white;
    animation: typewriter 1s steps(10) .75s 1 normal both,
    blinkTextCursor 500ms steps(40) infinite normal;
}

.about-me {
    text-align: center;
    min-height: 500px;
    display: flex;
    flex-flow: row wrap;
    align-content: center;
    justify-content: center;
    background-size: cover;
    width: 100%;
}

.about-me-default {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    flex: 1 1 0;
    margin: 125px 30px;
    z-index: 1;
}

.about-me-text {
    min-width: 300px;
    width: 35vw;
    background-color: black;
}

.name-svg {
    position: relative;
    left: 50%;
    transform: translateX(-50%);
    min-width: 350px;
    stroke-dasharray: 4002;
    stroke-width: 15px;
}

.name-svg.visible {
    animation: 3s fillSvg ease-in;
    stroke: white;
}

@keyframes fillSvg {
    0% {
        stroke-dashoffset: 4002;
    }
    100% {
        stroke-dashoffset: 0;
    }
}

.about-me-text p.visible {
    color: white;
}

.about-me-text ul {
    padding: 0;
}

.about-me-text li {
    padding: 15px 0px;
    font-size: 25px;
    text-align: center;
    list-style: none;
    opacity: 0;
}
/* ... */

